--- a/nb-NO/browser/chrome/browser/loop/loop.properties
+++ b/nb-NO/browser/chrome/browser/loop/loop.properties
@@ -225,6 +225,12 @@ peer_ended_conversation2=Personen du ringte har avsluttet samtalen.
 conversation_has_ended=Samtalen er avsluttet.
 restart_call=Koble til igjen
 
+## LOCALIZATION NOTE (contact_unavailable_title): The title displayed
+## when a contact is unavailable. Don't translate the part between {{..}}
+## because this will be replaced by the contact's name.
+contact_unavailable_title={{contactName}} er utilgjengelig.
+generic_contact_unavailable_title=Denne personen er utilgjengelig.
+
 generic_failure_title=Noe gikk galt.
 generic_failure_with_reason2=Du kan prøve igjen, eller sende en URL som du kan treffes på senere.
 generic_failure_no_reason2=Vil du prøve igjen?
@@ -271,7 +277,7 @@ feedback_category_audio_quality=Lydkvalitet
 feedback_category_video_quality=Videokvalitet
 feedback_category_was_disconnected=Ble koblet fra
 feedback_category_confusing=Forvirrende
-feedback_category_other=Annet:
+feedback_category_other2=Annet
 feedback_custom_category_text_placeholder=Hva gikk galt?
 feedback_submit_button=Send
 feedback_back_button=Tilbake
