--- a/nb-NO/browser/chrome/browser/preferences/preferences.properties
+++ b/nb-NO/browser/chrome/browser/preferences/preferences.properties
@@ -92,6 +92,14 @@ cannot=Blokker
 noCookieSelected=<ingen infokapsel valgt>
 cookiesAll=Følgende infokapsler er lagret på datamaskinen:
 cookiesFiltered=Følgende infokapsler passer til søket:
+# LOCALIZATION NOTE (removeSelectedCookies):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# If you need to display the number of selected elements in your language,
+# you can use #1 in your localization as a placeholder for the number.
+# For example this is the English string with numbers:   
+# removeSelectedCookied=Remove #1 Selected;Remove #1 Selected
+removeSelectedCookies=Slett valgt;Slett valgte
 
 #### Offline apps
 offlineAppsList.height=7em
@@ -137,9 +145,3 @@ syncUnlinkConfirm.label=Fjern tilknytning
 featureEnableRequiresRestart=%S må startes på nytt for å aktivere denne funksjonen.
 featureDisableRequiresRestart=%S må startes på nytt for å slå av denne funksjonen.
 shouldRestartTitle=Start %S på nytt
-
-###Preferences::Sync::Firefox Accounts
-firefoxAccountsVerificationSentTitle=Bekreftelse sendt
-# LOCALIZATION NOTE: %S = user's email address.
-firefoxAccountsVerificationSentHeading=En bekreftelseslenke er sendt til %S
-firefoxAccountVerificationSentDescription=Sjekk e-posten din og trykk på lenken for å starte synkroniseringen.
