--- a/nb-NO/browser/chrome/browser/shellservice.properties
+++ b/nb-NO/browser/chrome/browser/shellservice.properties
@@ -23,6 +23,8 @@ setDefaultBrowserNever.accesskey   = e
 setDefaultBrowserTitle=Standard nettleser
 setDefaultBrowserMessage=%S er ikke valgt som standard nettleser. Vil du bruke den som standard nettleser?
 setDefaultBrowserDontAsk=Alltid utfør denne kontrollen ved oppstart av %S.
+setDefaultBrowserAlertConfirm.label=Bruk %S som standard nettleser
+setDefaultBrowserAlertNotNow.label=Ikke nå
 
 desktopBackgroundLeafNameWin=Skrivebordsbakgrunn.bmp
 DesktopBackgroundDownloading=Lagrer bilde …
