--- a/nb-NO/browser/chrome/browser/browser.properties
+++ b/nb-NO/browser/chrome/browser/browser.properties
@@ -371,10 +371,10 @@ safebrowsing.notAnAttackButton.label=Dette er ikke et angrepsnettsted …
 safebrowsing.notAnAttackButton.accessKey=D
 
 # Ctrl-Tab
-# LOCALIZATION NOTE (ctrlTab.showAll.label): #1 represents the number
+# LOCALIZATION NOTE (ctrlTab.listAllTabs.label): #1 represents the number
 # of tabs in the current browser window. It will always be 2 at least.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-ctrlTab.showAll.label=;Vis alle #1 faner
+ctrlTab.listAllTabs.label=;List alle #1 faner
 
 # LOCALIZATION NOTE (addKeywordTitleAutoFill): %S will be replaced by the page's title
 # Used as the bookmark name when saving a keyword for a search field.
