sea_aurora-sv-SE jan l10n update

--- a/sv-SE/suite/chrome/common/notification.properties
+++ b/sv-SE/suite/chrome/common/notification.properties
@@ -16,6 +16,8 @@ carbonfailurepluginsMessage.button.label=Starta om i 32-bitarsläge
 carbonfailurepluginsMessage.button.accesskey=R
 
 missingpluginsMessage.title=Ytterligare insticksmoduler erfordras för att visa all media på den här sidan.
+missingpluginsMessage.button.label=Inställningar
+missingpluginsMessage.button.accesskey=I
 
 blockedpluginsMessage.title=Några insticksmoduler som erfordras för den här sidan har blockerats för ditt beskydd.
 blockedpluginsMessage.infoButton.label=Detaljer…
