--- a/sv-SE/suite/chrome/common/places/places.properties
+++ b/sv-SE/suite/chrome/common/places/places.properties
@@ -2,6 +2,13 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+delete.hostname.true=Ta bort historik för %S
+delete.hostname.false=Ta bort historik för webbplats
+delete.hostname.accesskey=w
+delete.domain.true=Ta bort historik för *.%S
+delete.domain.false=Ta bort historik för domän
+delete.domain.accesskey=d
+
 load-js-data-url-error=Av säkerhetsskäl kan javaskript eller fil-url:er inte laddas från historikfönstret eller sidofältet.
 noTitle=(ingen titel)
 
