--- a/sv-SE/suite/chrome/mailnews/compose/composeMsgs.properties
+++ b/sv-SE/suite/chrome/mailnews/compose/composeMsgs.properties
@@ -231,6 +231,9 @@ copyMessageStart=Kopierar meddelande till mappen %S…
 copyMessageComplete=Kopiering klar.
 copyMessageFailed=Kopiering misslyckades.
 
+filterMessageComplete=Filterregel klar.
+filterMessageFailed=Filterregler misslyckades.
+
 ## LOCALIZATION NOTE (largeMessageSendWarning):
 ## %S is the message size in user-friendly notation. Do not translate.
 largeMessageSendWarning=Varning! Du är på väg att skicka ett %S stort meddelande vilket kan överskrida max tillåten storlek på e-postservern. Är du säker på att du vill göra detta?
@@ -282,3 +285,5 @@ smtpEnterPasswordPromptTitle=Lösenord för SMTP-servern erfordras
 ## LOCALIZATION NOTE(errorSavingMsg): Do not translate the word %S. It
 ## will be replaced with the name of the folder the message is being saved to.
 errorSavingMsg=Ett fel uppstod vid kopieringen av meddelandet till mappen %S. Försöka igen?
+
+errorFilteringMsg=Ditt meddelande har skickats och sparats, men det uppstod ett fel när filterregler kördes mot meddelandet.
