--- a/sv-SE/browser/chrome/browser/search.properties
+++ b/sv-SE/browser/chrome/browser/search.properties
@@ -4,6 +4,15 @@
 
 searchtip=Sök med %S
 
+# LOCALIZATION NOTE (searchPlaceholder): this is shown in the searchbox when
+# the user hasn't typed anything yet.
+searchPlaceholder=Sök
+
+# LOCALIZATION NOTE (searchHeader): this is displayed at the top of the panel
+# showing search suggestions.
+# %S is replaced with the name of the current default search engine.
+searchHeader=%S Sök
+
 # LOCALIZATION NOTE (cmd_pasteAndSearch): "Search" is a verb, this is the
 # search bar equivalent to the url bar's "Paste & Go"
 cmd_pasteAndSearch=Klistra in och sök
@@ -15,3 +24,4 @@ cmd_showSuggestions=Visa förslag
 cmd_showSuggestions_accesskey=V
 
 cmd_addFoundEngine=Lägg till ”%S”
+
