--- a/sv-SE/browser/chrome/browser/shellservice.properties
+++ b/sv-SE/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,28 @@
 
 optionsLabel=%S-&inställningar
 safeModeLabel=%S &felsäkert läge
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = Få det mesta ut av %S genom att ange den som din förvalda webbläsare
+setDefaultBrowserConfirm.label     = Använd %S som min förvalda webbläsare
+setDefaultBrowserConfirm.accesskey = A
+setDefaultBrowserOptions.label     = Inställningar
+setDefaultBrowserOptions.accesskey = I
+setDefaultBrowserNotNow.label      = Inte nu
+setDefaultBrowserNotNow.accesskey  = I
+setDefaultBrowserNever.label       = Fråga mig inte igen
+setDefaultBrowserNever.accesskey   = F
+
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk, setDefaultBrowserAlertConfirm.label, setDefaultBrowserAlertNotNow.label):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
 setDefaultBrowserTitle=Standardwebbläsare
 setDefaultBrowserMessage=%S används inte som standardwebbläsare. Vill du göra den till standardwebbläsare?
 setDefaultBrowserDontAsk=Utför alltid den här kontrollen när %S startas.
-alreadyDefaultBrowser=%S används redan som standardwebbläsare.
+setDefaultBrowserAlertConfirm.label=Använd %S som min förvalda webbläsare
+setDefaultBrowserAlertNotNow.label=Inte nu
+
 desktopBackgroundLeafNameWin=Firefox-bakgrund.bmp
 DesktopBackgroundDownloading=Sparar bild…
 DesktopBackgroundSet=Ange skrivbordsbakgrund
