[sv-SE] update from Pootle (firefox)

--- a/sv-SE/browser/chrome/browser/loop/loop.properties
+++ b/sv-SE/browser/chrome/browser/loop/loop.properties
@@ -65,7 +65,7 @@ retry_button=Försök igen
 share_email_subject4={{clientShortname}} — Gå med i konversation
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body4=Hej! \n\nGå med i video konversation genom att använda {{clientShortname}}: \n\nDu behöver inte ladda eller installera något. Bara kopiera och klistra in denna URL i din webbläsare:\n\n{{callUrl}} \n\nOm du vill. kan du lära dig mer om {{clientShortname}} på{{learnMoreUrl}} \n\nVi hörs snart!
+share_email_body4=Hej! \n\nGå med mig för en videokonversation med {{clientShortname}}: \n\nDu behöver inte ladda ner eller installera något. Kopiera och klistra in adressen i din webbläsare:\n\n{{callUrl}} \n\nOm du vill kan du också läsa mer om {{clientShortname}} på {{learnMoreUrl}} \n\nVi hörs snart!
 share_button=E-post
 share_button2=E-posta länk
 copy_url_button=Kopiera
