Bug 1125642 - Firefox Desktop 37: devtools. r=Archaeopteryx,KaiRo

--- a/de/browser/chrome/browser/devtools/projecteditor.properties
+++ b/de/browser/chrome/browser/devtools/projecteditor.properties
@@ -42,9 +42,14 @@ projecteditor.deleteFolderPromptMessage=Soll dieser Ordner wirklich gelöscht we
 projecteditor.deleteFilePromptMessage=Soll diese Datei wirklich gelöscht werden?
 
 # LOCALIZATION NOTE (projecteditor.newLabel):
-# This string is displayed as a context menu item for adding a new file to
-# the directory
+# This string is displayed as a menu item for adding a new file to
+# the directory.
 projecteditor.newLabel=Neu…
+
+# LOCALIZATION NOTE (projecteditor.renameLabel):
+# This string is displayed as a menu item for renaming a file in
+# the directory.
+projecteditor.renameLabel=Umbenennen
 
 # LOCALIZATION NOTE (projecteditor.saveLabel):
 # This string is displayed as a menu item for saving the current file.
