--- a/de/browser/chrome/browser/devtools/webide.properties
+++ b/de/browser/chrome/browser/devtools/webide.properties
@@ -65,7 +65,7 @@ addons_status_installing=Wird installiert
 
 runtimedetails_checkno=nein
 runtimedetails_checkyes=ja
-runtimedetails_checkunkown=unbekannt
+runtimedetails_checkunknown=unbekannt (benötigt ADB Helper 0.4.0 oder neuer)
 runtimedetails_notUSBDevice=Kein USB-Gerät
 
 # Validation status
