--- a/de/browser/chrome/browser/devtools/timeline.properties
+++ b/de/browser/chrome/browser/devtools/timeline.properties
@@ -35,10 +35,11 @@ timeline.records=EINTRÄGE
 
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
-timeline.label.styles=Stile
-timeline.label.reflow=DOM-Neuberechnung
+# We want to use the same wording as Google Chrome
+timeline.label.styles2=Stil-Neuberechnung
+timeline.label.reflow2=Layout
 timeline.label.paint=Zeichnen
-timeline.label.javascript=Javascript
+timeline.label.javascript2=Funktionsaufruf
 timeline.label.domevent=DOM-Ereignis
 timeline.label.consoleTime=Konsole
 
@@ -65,3 +66,7 @@ timeline.markerDetail.DOMEventPhase=Phase:
 timeline.markerDetail.DOMEventTargetPhase=Target
 timeline.markerDetail.DOMEventCapturingPhase=Capture
 timeline.markerDetail.DOMEventBubblingPhase=Bubbling
+timeline.markerDetail.stack=Aufrufliste:
+timeline.markerDetail.startStack=Aufrufliste am Anfang:
+timeline.markerDetail.endStack=Aufrufliste am Ende:
+timeline.markerDetail.unknownFrame=<unbekannte Adresse>
