Bug 1125061 - Translation update proposed for browser/chrome/browser/accounts.properties:needUserLong

--- a/sk/browser/chrome/browser/accounts.properties
+++ b/sk/browser/chrome/browser/accounts.properties
@@ -5,7 +5,7 @@
 # LOCALIZATION NOTE (needUserShort)
 # %S = Firefox Accounts brand name from syncBrand.dtd
 needUserShort = Synchronizácia je možná len s %S
-needUserLong = Službu Sync sme prerobili tak, aby bola jednoducho použiteľná pre kohokoľvek. Pred pokračovaním aktualizujte svoj účet Firefox Account.
+needUserLong = Službu Sync sme prerobili tak, aby bola jednoducho použiteľná pre kohokoľvek. Ak chcete pokračovať v synchronizácii, prejdite na účet Firefox Account.
 
 upgradeToFxA.label = Aktualizovať
 upgradeToFxA.accessKey = A
