--- a/sk/browser/chrome/browser/devtools/webaudioeditor.properties
+++ b/sk/browser/chrome/browser/devtools/webaudioeditor.properties
@@ -32,3 +32,7 @@ collapseInspector=Zbaliť prieskumníka
 # LOCALIZATION NOTE (expandInspector): This is the tooltip for the button
 # that expands the inspector in the web audio tool UI.
 expandInspector=Rozbaliť prieskumníka
+
+# LOCALIZATION NOTE (webAudioEditorTooltipBypass): This is the tooltip for the
+# button that bypasses an AudioNode
+webAudioEditorTooltipBypass=Obísť AudioNode
