[es-MX] update from Pootle (firefox)

--- a/es-MX/dom/chrome/dom/dom.properties
+++ b/es-MX/dom/chrome/dom/dom.properties
@@ -162,3 +162,4 @@ XMLDocumentLoadPrincipalMismatch=El uso de document.load está prohibido en docu
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
 IndexedDBTransactionAbortNavigation=La operación IndexedDB que aún no se había completado se abandonó por la navegación de páginas.
 # LOCALIZATION NOTE (WillChangeBudgetWarning): Do not translate Will-change, %1$S,%2$S,%3$S are numbers.
+WillChangeBudgetWarning=El consumo de memoria Will-change es demasiado alto. El área de la superficie cubre %1$S píxeles, el presupuesto es el área de la superficie del documento multiplicada por %2$S (%3$S píxeles). Todas las apariciones de will-change en el documento se ignoran si se supera el presupuesto.
