--- a/es-MX/browser/chrome/browser/devtools/timeline.properties
+++ b/es-MX/browser/chrome/browser/devtools/timeline.properties
@@ -36,7 +36,10 @@ timeline.records=RECORDS
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
 # We want to use the same wording as Google Chrome
+timeline.label.styles2=Recalcular estilo
+timeline.label.reflow2=Disposición
 timeline.label.paint=Dibujar
+timeline.label.javascript2=Llamar función
 timeline.label.domevent=Evento DOM
 timeline.label.consoleTime=Consola
 
@@ -64,3 +67,6 @@ timeline.markerDetail.DOMEventTargetPhase=Objetivo
 timeline.markerDetail.DOMEventCapturingPhase=Captura
 timeline.markerDetail.DOMEventBubblingPhase=Burbujeante\u0020
 timeline.markerDetail.stack=Pila:
+timeline.markerDetail.startStack=Pila al inicio:
+timeline.markerDetail.endStack=Pila al final:
+timeline.markerDetail.unknownFrame=<ubicación desconocida>
