--- a/nl/suite/chrome/common/notification.properties
+++ b/nl/suite/chrome/common/notification.properties
@@ -11,6 +11,8 @@ carbonfailurepluginsMessage.button.label=Herstarten in 32-bits modus
 carbonfailurepluginsMessage.button.accesskey=r
 
 missingpluginsMessage.title=Er zijn extra plug-ins vereist om alle media op deze pagina weer te geven.
+missingpluginsMessage.button.label=Voorkeuren
+missingpluginsMessage.button.accesskey=V
 
 blockedpluginsMessage.title=Sommige door deze pagina vereiste plug-ins zijn geblokkeerd voor uw bescherming.
 blockedpluginsMessage.infoButton.label=Details…
