--- a/nl/suite/chrome/common/places/places.properties
+++ b/nl/suite/chrome/common/places/places.properties
@@ -2,6 +2,13 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+delete.hostname.true=Geschiedenis verwijderen voor %S
+delete.hostname.false=Geschiedenis verwijderen voor website
+delete.hostname.accesskey=s
+delete.domain.true=Geschiedenis verwijderen voor *.%S
+delete.domain.false=Geschiedenis verwijderen voor domein
+delete.domain.accesskey=G
+
 load-js-data-url-error=Om veiligheidsredenen kunnen javascript- of data-url’s niet vanuit de geschiedenis of zijbalk worden geladen.
 noTitle=(geen titel)
 
