--- a/fr/browser/chrome/browser/loop/loop.properties
+++ b/fr/browser/chrome/browser/loop/loop.properties
@@ -224,6 +224,12 @@ peer_ended_conversation2=Votre correspondant a mis fin à la conversation.
 conversation_has_ended=Votre conversation est terminée.
 restart_call=Rappeler
 
+## LOCALIZATION NOTE (contact_unavailable_title): The title displayed
+## when a contact is unavailable. Don't translate the part between {{..}}
+## because this will be replaced by the contact's name.
+contact_unavailable_title={{contactName}} est indisponible.
+generic_contact_unavailable_title=Cette persone est indisponible.
+
 generic_failure_title=Une erreur s'est produite.
 generic_failure_with_reason2=Vous pouvez réessayer ou envoyer par message électronique un lien permettant d'être contacté plus tard.
 generic_failure_no_reason2=Voulez-vous réessayer ?
