--- a/fr/browser/chrome/browser/shellservice.properties
+++ b/fr/browser/chrome/browser/shellservice.properties
@@ -23,6 +23,8 @@ setDefaultBrowserNever.accesskey   = N
 setDefaultBrowserTitle=Navigateur par défaut
 setDefaultBrowserMessage=%S n'est pas votre navigateur par défaut. Voulez-vous le définir en tant que navigateur par défaut ?
 setDefaultBrowserDontAsk=Toujours effectuer cette vérification au démarrage de %S.
+setDefaultBrowserAlertConfirm.label=Faire de %S mon navigateur par défaut
+setDefaultBrowserAlertNotNow.label=Plus tard
 
 desktopBackgroundLeafNameWin=Fond d'écran.bmp
 DesktopBackgroundDownloading=Enregistrement de l'image…
