--- a/nl/suite/chrome/mailnews/compose/composeMsgs.properties
+++ b/nl/suite/chrome/mailnews/compose/composeMsgs.properties
@@ -231,6 +231,9 @@ copyMessageStart=Bericht naar map %S kopiëren…
 copyMessageComplete=Kopiëren voltooid.
 copyMessageFailed=Kopiëren mislukt.
 
+filterMessageComplete=Filteren voltooid.
+filterMessageFailed=Filteren mislukt.
+
 ## LOCALIZATION NOTE (largeMessageSendWarning):
 ## %S is the message size in user-friendly notation. Do not translate.
 largeMessageSendWarning=Waarschuwing! U gaat een bericht van %S verzenden. Het is mogelijk dat dit de limiet op de mailserver overschrijdt. Weet u zeker dat u dit wilt doen?
@@ -283,3 +286,7 @@ smtpEnterPasswordPromptTitle=SMTP-serverwachtwoord vereist
 ## will be replaced with the name of the folder the message is being saved to.
 errorSavingMsg=Er is een fout opgetreden bij het opslaan van het bericht naar de map %S. Opnieuw proberen?
 
+errorFilteringMsg=was an error while running message filters on it.
+<source>
+	
+Uw bericht is verzonden en opgeslagen, maar er is een fout opgetreden bij het uitvoeren van de berichtenfilters op het bericht.
