[qa][browser] Missing non breaking space

--- a/fr/browser/chrome/browser/loop/loop.properties
+++ b/fr/browser/chrome/browser/loop/loop.properties
@@ -228,7 +228,7 @@ restart_call=Rappeler
 ## when a contact is unavailable. Don't translate the part between {{..}}
 ## because this will be replaced by the contact's name.
 contact_unavailable_title={{contactName}} est indisponible.
-generic_contact_unavailable_title=Cette persone est indisponible.
+generic_contact_unavailable_title=Cette personne est indisponible.
 
 generic_failure_title=Une erreur s'est produite.
 generic_failure_with_reason2=Vous pouvez réessayer ou envoyer par message électronique un lien permettant d'être contacté plus tard.
