[qa][browser] Fix variable

--- a/fr/browser/chrome/browser/accounts.properties
+++ b/fr/browser/chrome/browser/accounts.properties
@@ -4,7 +4,7 @@
 
 # LOCALIZATION NOTE (needUserShort)
 # %S = Firefox Accounts brand name from syncBrand.dtd
-needUserShort = Un compte Firefox est nécessaire pour synchroniser les données
+needUserShort = Un %S est nécessaire pour synchroniser les données
 needUserLong = Nous avons repensé Sync pour le rendre plus simple d'utilisation. Veuillez créer un compte Firefox pour poursuivre la synchronisation.
 
 upgradeToFxA.label = Créer un compte
