Aviary.pl bug 4945 - Odmiana czasownika "udzielać"

--- a/pl/mobile/android/chrome/browser.properties
+++ b/pl/mobile/android/chrome/browser.properties
@@ -109,28 +109,28 @@ desktopNotification.dontAskAgain=Nie pytaj ponownie dla tej witryny
 # Contacts API
 contacts.allow=Udziel
 contacts.dontAllow=Nie udzielaj
-contacts.ask=Udzielić programowi %S dostęp do kontaktów?
+contacts.ask=Udzielić programowi %S dostępu do kontaktów?
 contacts.dontAskAgain=Nie pytaj więcej dla tej witryny
 
 # Device Storage API
 deviceStorageMusic.allow=Udziel
 deviceStorageMusic.dontAllow=Nie udzielaj
-deviceStorageMusic.ask=Udzielić programowi %S dostęp do twojej muzyki?
+deviceStorageMusic.ask=Udzielić programowi %S dostępu do twojej muzyki?
 deviceStorageMusic.dontAskAgain=Nie pytaj więcej dla tej witryny
 
 deviceStoragePictures.allow=Udziel
 deviceStoragePictures.dontAllow=Nie udzielaj
-deviceStoragePictures.ask=Udzielić programowi %S dostęp do twoich zdjęć?
+deviceStoragePictures.ask=Udzielić programowi %S dostępu do twoich zdjęć?
 deviceStoragePictures.dontAskAgain=Nie pytaj więcej dla tej witryny              
 
 deviceStorageSdcard.allow=Udziel
 deviceStorageSdcard.dontAllow=Nie udzielaj
-deviceStorageSdcard.ask=Udzielić programowi %S dostęp do zewnętrznego nośnika danych?
+deviceStorageSdcard.ask=Udzielić programowi %S dostępu do zewnętrznego nośnika danych?
 deviceStorageSdcard.dontAskAgain=Nie pytaj więcej dla tej witryny
 
 deviceStorageVideos.allow=Udziel
 deviceStorageVideos.dontAllow=Nie udzielaj
-deviceStorageVideos.ask=Udzielić programowi %S dostęp do twoich filmów?
+deviceStorageVideos.ask=Udzielić programowi %S dostępu do twoich filmów?
 deviceStorageVideos.dontAskAgain=Nie pytaj więcej dla tej witryny
 
 # New Tab Popup
