[th] update from Pootle (mobile)

--- a/th/mobile/android/chrome/pippki.properties
+++ b/th/mobile/android/chrome/pippki.properties
@@ -29,6 +29,7 @@ certmgr.title=รายละเอียดใบรับรอง
 # These strings are stolen from security/manager/locales/en-US/chrome/pippki/certManager.dtd
 certmgr.subjectinfo.label=ออกให้
 certmgr.issuerinfo.label=ออกโดย
+certmgr.periodofvalidity.label=ระยะเวลาความถูกต้อง
 certmgr.fingerprints.label=ลายนิ้วมือ
 certmgr.certdetail.cn=ชื่อสามัญ (CN)
 certmgr.certdetail.o=องค์กร (O)
@@ -36,4 +37,5 @@ certmgr.certdetail.ou=หน่วยงาน (OU)
 certmgr.certdetail.serialnumber=เลขอนุกรม
 certmgr.certdetail.sha256fingerprint=ลายนิ้วมือ SHA-256
 certmgr.certdetail.sha1fingerprint=ลายนิ้วมือ SHA1
+certmgr.begins=เริ่มต้นเมื่อ
 certmgr.expires=หมดอายุเมื่อ
