--- a/sv-SE/suite/chrome/mailnews/charsetTitles.properties
+++ b/sv-SE/suite/chrome/mailnews/charsetTitles.properties
@@ -54,7 +54,7 @@ windows-1253.title = Grekisk (Windows-1253)
 x-mac-greek.title = Grekisk (MacGreek)
 windows-1258.title = Vietnamesisk (Windows-1258)
 windows-874.title = Thailändsk (Windows-874)
-iso-8859-6-e.title = Arabisk (ISO-8859-6-E)
+iso-8859-6.title = Arabisk (ISO-8859-6)
 iso-8859-8.title = Hebreisk visuell (ISO-8859-8)
 iso-8859-8-i.title = Hebreisk (ISO-8859-8-I)
 windows-1255.title = Hebreisk (Windows-1255)
