--- a/sv-SE/browser/chrome/browser/devtools/app-manager.properties
+++ b/sv-SE/browser/chrome/browser/devtools/app-manager.properties
@@ -2,6 +2,9 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+index.deprecationNotice=App Hanteraren kommer att tas bort i en kommande uppdatering. Dina projekt har blivit överförda till WebIDE.
+index.launchWebIDE=Starta WebIDE
+index.readMoreAboutWebIDE=Läs mer
 # LOCALIZATION NOTE (device.deviceSize): %1$S is the device's width, %2$S is
 # the device's height, %3$S is the device's pixel density.
 # Example: 800x480 (86 DPI).
@@ -29,7 +32,7 @@ validator.invalidProjectType=Okänd projekttyp ”%S”
 # don't translate 'icons' and 'name'.
 validator.missNameManifestProperty=Saknar obligatoriskt ”name” i manifest.
 validator.missIconsManifestProperty=Saknar ”icons” i manifest.
-validator.missIconMarketplace=Appbidrag till Marketplace behöver en ikon på minst 128px
+validator.missIconMarketplace2=appbidrag till Marketplace behöver en ikon på minst 128px
 validator.invalidAppType=Okänd apptyp: ”%S”.
 validator.invalidHostedPriviledges=Appar på webben kan inte vara av typen ”%S”.
 validator.noCertifiedSupport=”certifierade” appar stöds inte fullt ut av apphanteraren.
