--- a/sv-SE/browser/chrome/browser/devtools/gclicommands.properties
+++ b/sv-SE/browser/chrome/browser/devtools/gclicommands.properties
@@ -20,6 +20,10 @@ helpDesc=Få hjälp med tillgängliga kommandon
 # explain the contents of the command help table.
 helpAvailable=Tillgängliga kommandon
 
+# LOCALIZATION NOTE (notAvailableInE10S) Used in the output of any command that
+# is not compatible with multiprocess mode (E10S).
+notAvailableInE10S=Kommandot '%1$S' är inte tillgängligt i multiprocessläge (E10S)
+
 # LOCALIZATION NOTE (consoleDesc) A very short string used to describe the
 # function of the console command.
 consoleDesc=Kommandon för att styra konsolen
@@ -125,6 +129,116 @@ screenshotErrorCopying=Ett fel uppstod vid kopiering till urklipp.
 # screenshot is successfully copied to the clipboard.
 screenshotCopied=Kopierad till urklipp.
 
+# LOCALIZATION NOTE (screenshotTooltip) Text displayed as tooltip for screenshot button in devtools ToolBox.
+screenshotTooltip=Ta en full skärmavbild
+
+# LOCALIZATION NOTE (highlightDesc) A very short description of the
+# 'highlight' command. See highlightManual for a fuller description of what
+# it does. This string is designed to be shown in a menu alongside the
+# command name, which is why it should be as short as possible.
+highlightDesc=Markera noder
+
+# LOCALIZATION NOTE (highlightManual) A fuller description of the 'highlight'
+# command, displayed when the user asks for help on what it does.
+highlightManual=Markera noder som matchar en selektor på sidan
+
+# LOCALIZATION NOTE (highlightSelectorDesc) A very short string to describe
+# the 'selector' parameter to the 'highlight' command, which is displayed in
+# a dialog when the user is using this command.
+highlightSelectorDesc=CSS-selektor
+
+# LOCALIZATION NOTE (highlightSelectorManual) A fuller description of the
+# 'selector' parameter to the 'highlight' command, displayed when the user
+# asks for help on what it does.
+highlightSelectorManual=CSS-selektorn som används för att matcha noder på sidan
+
+# LOCALIZATION NOTE (highlightOptionsDesc) The title of a set of options to
+# the 'highlight' command, displayed as a heading to the list of option.
+highlightOptionsDesc=Alternativ
+
+# LOCALIZATION NOTE (highlightHideGuidesDesc) A very short string to describe
+# the 'hideguides' option parameter to the 'highlight' command, which is
+# displayed in a dialog when the user is using this command.
+highlightHideGuidesDesc=Dölj hjälplinjer
+
+# LOCALIZATION NOTE (highlightHideGuidesManual) A fuller description of the
+# 'hideguides' option parameter to the 'highlight' command, displayed when the
+# user asks for help on what it does.
+highlightHideGuidesManual=Dölj hjälplinjerna runt den markerade noden
+
+# LOCALIZATION NOTE (highlightShowInfoBarDesc) A very short string to describe
+# the 'showinfobar' option parameter to the 'highlight' command, which is
+# displayed in a dialog when the user is using this command.
+highlightShowInfoBarDesc=Vissa infofält för noder
+
+# LOCALIZATION NOTE (highlightShowInfoBarManual) A fuller description of the
+# 'showinfobar' option parameter to the 'highlight' command, displayed when the
+# user asks for help on what it does.
+highlightShowInfoBarManual=Visa infofält ovanför den markerade noden (infofältet visar taggnamn, attribut och storlek)
+
+# LOCALIZATION NOTE (highlightShowAllDesc) A very short string to describe
+# the 'showall' option parameter to the 'highlight' command, which is
+# displayed in a dialog when the user is using this command.
+highlightShowAllDesc=Visa alla träffar\u0020
+
+# LOCALIZATION NOTE (highlightShowAllManual) A fuller description of the
+# 'showall' option parameter to the 'highlight' command, displayed when the
+# user asks for help on what it does.
+highlightShowAllManual=Om för många noder överensstämmer med urvalet, visas bara de första 100 för att undvika att tynga ner sidan för mycket. Använd detta alternativ för att visa alla träffar istället.
+
+# LOCALIZATION NOTE (highlightRegionDesc) A very short string to describe the
+# 'region' option parameter to the 'highlight' command, which is displayed in a
+# dialog when the user is using this command.
+highlightRegionDesc=Boxmodellregion
+
+# LOCALIZATION NOTE (highlightRegionManual) A fuller description of the 'region'
+# option parameter to the 'highlight' command, displayed when the user asks for
+# help on what it does.
+highlightRegionManual=Vilken region i boxmodellen ska markeras: 'content', 'padding', 'border' eller 'margin'
+
+# LOCALIZATION NOTE (highlightFillDesc) A very short string to describe the
+# 'fill' option parameter to the 'highlight' command, which is displayed in a
+# dialog when the user is using this command.
+highlightFillDesc=Fyllningsstil
+
+# LOCALIZATION NOTE (highlightFillManual) A fuller description of the 'fill'
+# option parameter to the 'highlight' command, displayed when the user asks for
+# help on what it does.
+highlightFillManual=Ange en egen färg istället för standard fyllningsstil för regionen
+
+# LOCALIZATION NOTE (highlightKeepDesc) A very short string to describe the
+# 'keep' option parameter to the 'highlight' command, which is displayed in a
+# dialog when the user is using this command.
+highlightKeepDesc=Behåll nuvarande markeringar
+
+# LOCALIZATION NOTE (highlightKeepManual) A fuller description of the 'keep'
+# option parameter to the 'highlight' command, displayed when the user asks for
+# help on what it does.
+highlightKeepManual=Som standard döljs nuvarande markeringar när kommandot körs, om inte detta alternativ är satt
+
+# LOCALIZATION NOTE (highlightOutputConfirm) A confirmation message for the
+# 'highlight' command, displayed to the user once the command has been entered,
+# informing the user how many nodes have been highlighted successfully and how
+# to turn highlighting off
+highlightOutputConfirm=%1$S noder markerade
+
+# LOCALIZATION NOTE (highlightOutputMaxReached) A confirmation message for the
+# 'highlight' command, displayed to the user once the command has been entered,
+# informing the user how many nodes have been highlighted successfully and that
+# some nodes could not be highlighted due to the maximum number of nodes being
+# reached, and how to turn highlighting off
+highlightOutputMaxReached=%1$S noder överensstämmer, men bara %2$S noder markerades. Använd "--showall" för att visa alla
+
+# LOCALIZATION NOTE (unhighlightDesc) A very short description of the
+# 'unhighlight' command. See unhighlightManual for a fuller description of what
+# it does. This string is designed to be shown in a menu alongside the
+# command name, which is why it should be as short as possible.
+unhighlightDesc=Avmarkera alla noder
+
+# LOCALIZATION NOTE (unhighlightManual) A fuller description of the 'unhighlight'
+# command, displayed when the user asks for help on what it does.
+unhighlightManual=Avmarkera alla noder som tidigare markerades med "highlight"-kommandot
+
 # LOCALIZATION NOTE (restartBrowserDesc) A very short description of the
 # 'restart' command. This string is designed to be shown in a menu alongside the
 # command name, which is why it should be as short as possible.
@@ -164,6 +278,20 @@ inspectNodeDesc=CSS-selektor
 # parameter to the 'inspect' command, displayed when the user asks for help
 # on what it does.
 inspectNodeManual=En CSS-selektor som tillsammans med document.querySelector identifierar ett enskilt element
+
+# LOCALIZATION NOTE (eyedropperDesc) A very short description of the 'eyedropper'
+# command. See eyedropperManual for a fuller description of what it does. This
+# string is designed to be shown in a menu alongside the command name, which
+# is why it should be as short as possible.
+eyedropperDesc=Välj en färg från sidan\u0020
+
+# LOCALIZATION NOTE (eyedropperManual) A fuller description of the 'eyedropper'
+# command, displayed when the user asks for help on what it does.
+eyedropperManual=Öppna en panel som förstorar ett område av sidan för att inspektera bildpunkter och kopiera färgvärden
+
+# LOCALIZATION NOTE (eyedropperTooltip) A string displayed as the
+# tooltip of button in devtools toolbox which toggles the Eyedropper tool.
+eyedropperTooltip=Dra en färg från sidan\u0020
 
 # LOCALIZATION NOTE (tiltDesc) A very short description of the 'tilt'
 # command. See tiltManual for a fuller description of what it does. This
@@ -521,21 +649,21 @@ resizePageArgHeightDesc=Höjd i pixlar
 # LOCALIZATION NOTE (resizeModeOnDesc) A very short string to describe the
 # 'resizeon ' command. This string is designed to be shown in a menu
 # alongside the command name, which is why it should be as short as possible.
-resizeModeOnDesc=Öppna Responsiv design-läget
+resizeModeOnDesc=Öppna Följsam design-läget
 
 # LOCALIZATION NOTE (resizeModeOffDesc) A very short string to describe the
 # 'resize off' command. This string is designed to be shown in a menu
 # alongside the command name, which is why it should be as short as possible.
-resizeModeOffDesc=Avsluta Responsiv design-läget
+resizeModeOffDesc=Avsluta Följsam design-läget
 
 # LOCALIZATION NOTE (resizeModeToggleDesc) A very short string to describe the
 # 'resize toggle' command. This string is designed to be shown in a menu
 # alongside the command name, which is why it should be as short as possible.
-resizeModeToggleDesc=Växla Responsiv design-läget
+resizeModeToggleDesc=Växla Följsam design-läget
 
 # LOCALIZATION NOTE (resizeModeToggleTooltip) A string displayed as the
 # tooltip of button in devtools toolbox which toggles Responsive Design Mode.
-resizeModeToggleTooltip=Responsivt designläge
+resizeModeToggleTooltip=Följsamt designläge
 
 # LOCALIZATION NOTE (resizeModeToDesc) A very short string to describe the
 # 'resize to' command. This string is designed to be shown in a menu
@@ -545,12 +673,12 @@ resizeModeToDesc=Ändra sidstorlek
 # LOCALIZATION NOTE (resizeModeDesc) A very short string to describe the
 # 'resize' command. This string is designed to be shown in a menu
 # alongside the command name, which is why it should be as short as possible.
-resizeModeDesc=Kontrollera Responsiv design-läget
+resizeModeDesc=Kontrollera Följsam design-läget
 
 # LOCALIZATION NOTE (resizeModeManual) A fuller description of the 'resize'
 # command, displayed when the user asks for help on what it does.
 # The argument (%1$S) is the browser name.
-resizeModeManual2=Responsiva webbplatser anpassar sig till miljön så att de ser bra ut på mobila enheter, en bioduk och allt där emellan. Med Responsiv design-läget kan du enkelt testa ett flertal sidstorlekar i %1$S utan att behöva ändra storleken på webbläsaren.
+resizeModeManual2=Föjsammaa webbplatser anpassar sig till miljön så att de ser bra ut på mobila enheter, en bioduk och allt där emellan. Med Följsam design-läget kan du enkelt testa ett flertal sidstorlekar i %1$S utan att behöva ändra storleken på webbläsaren.
 
 # LOCALIZATION NOTE (cmdDesc) A very short description of the 'cmd'
 # command. This string is designed to be shown in a menu alongside the command
@@ -562,16 +690,18 @@ cmdDesc=Manipulera kommandona
 # name, which is why it should be as short as possible.
 cmdRefreshDesc=Läs om mozcmd-katalogen
 
-# LOCALIZATION NOTE (cmdStatus) When the we load new commands from mozcmd
-# directory, we report on how many we loaded. %1$S is a count of the number
-# of loaded commands, and %2$S is the directory we loaded from.
-cmdStatus=Läste in %1$S kommandon från ”%2$S”
+# LOCALIZATION NOTE (cmdStatus3) When the we load new commands from mozcmd
+# directory, we report where we loaded from using %1$S.
+cmdStatus3=Läste in kommandon från '%1$S'
 
-# LOCALIZATION NOTE (cmdSetdirDesc) 
+# LOCALIZATION NOTE (cmdSetdirDesc)  A very short description of the 'cmd setdir'
+# command. This string is designed to be shown in a menu alongside the command
+# name, which is why it should be as short as possible.
 cmdSetdirDesc=Ställ in en mozcmd-katalog
 
-# LOCALIZATION NOTE (cmdSetdirManual) 
-cmdSetdirManual=En mozcmd-katalog är ett enkelt sätt att skapa nya egna kommandon för Firefox kommandorad. För mer information, se <a href="https://developer.mozilla.org/en-US/docs/Tools/GCLI/Customization">MDN-dokumentationen</a>.
+# LOCALIZATION NOTE (cmdSetdirManual2) A fuller description of the 'cmd setdir'
+# command, displayed when the user asks for help on what it does.
+cmdSetdirManual2=En 'mozcmd' katalog är ett enkelt sätt att skapa nya egna kommandon för Firefox kommandorad. För mer information, se <a href="https://developer.mozilla.org/en-US/docs/Tools/GCLI/Customization">MDN-dokumentationen</a>.
 
 # LOCALIZATION NOTE (cmdSetdirDirectoryDesc) The description of the directory
 # parameter to the 'cmd setdir' command.
@@ -994,7 +1124,6 @@ jsbIndentCharDesc=De tecken som används för att indentera varje rad
 # does.
 jsbIndentCharManual=De tecken som används för att indentera varje rad, mellanslag eller tabbar.
 
-# LOCALIZATION NOTE (doNotPreserveNewlines) A very short description of
 # the 'jsb <doNotPreserveNewlines>' parameter. This string is designed to be
 # shown in a menu alongside the command name, which is why it should be as short
 # as possible.
@@ -1373,4 +1502,29 @@ mediaEmulateDesc=Emulerar en specificerad CSS-mediatyp
 mediaEmulateManual=Visar dokumentet som om det renderats på en enhet som stöder den angivna mediatypen, med relevanta CSS-regler tillämpade.
 mediaEmulateType=Mediatypen att emulera
 mediaResetDesc=Stoppa emulering av CSS-mediatyp
-mediaResetManual=Stoppa emulering av CSS-mediatyp
+
+# LOCALIZATION NOTE (injectDesc, injectManual, injectLibraryDesc, injectLoaded,
+# injectFailed) These strings describe the 'inject' commands and all available
+# parameters.
+injectDesc=Infoga gemensamma bibliotek i sidan
+injectManual2=Infoga gemensamma bibliotek i innehållet i sidan vilket också blir åtkomligt från konsolen.
+injectLibraryDesc=Välj biblioteket som ska infogas eller ange en giltig skript-URI att infoga
+injectLoaded=%1$S laddad
+injectFailed=Misslyckades att ladda %1$S - Ogiltig URI
+
+# LOCALIZATION NOTE (folderDesc, folderOpenDesc, folderOpenDir,
+# folderOpenProfileDesc) These strings describe the 'folder' commands and
+# all available parameters.
+folderDesc=Öppna mappar
+folderOpenDesc=Öppna mappsökväg
+folderOpenDir=Katalogsökväg
+folderOpenProfileDesc=Öppna profil katalog\u0020
+
+# LOCALIZATION NOTE (folderInvalidPath) A string displayed as the result
+# of the 'folder open' command with an invalid folder path.
+folderInvalidPath=Ange en giltig sökväg
+
+# LOCALIZATION NOTE (folderOpenDirResult) A very short string used to
+# describe the result of the 'folder open' command.
+# The argument (%1$S) is the folder path.
+folderOpenDirResult=Öppnade %1$S
