--- a/sv-SE/browser/chrome/browser/devtools/netmonitor.properties
+++ b/sv-SE/browser/chrome/browser/devtools/netmonitor.properties
@@ -15,6 +15,10 @@
 # displayed inside the developer tools window and in the Developer Tools Menu.
 netmonitor.label=Nätverk
 
+# LOCALIZATION NOTE (netmonitor.panelLabel):
+# This is used as the label for the toolbox panel.
+netmonitor.panelLabel=Nätverkspanel
+
 # LOCALIZATION NOTE (netmonitor.commandkey, netmonitor.accesskey)
 # Used for the menuitem in the tool menu
 netmonitor.commandkey=Q
@@ -24,6 +28,46 @@ netmonitor.accesskey=N
 # This string is displayed in the tooltip of the tab when the Network Monitor is
 # displayed inside the developer tools window.
 netmonitor.tooltip=Nätverksbevakning
+
+# LOCALIZATION NOTE (netmonitor.security.state.secure)
+# This string is used as an tooltip for request that was performed over secure
+# channel i.e. the connection was encrypted.
+netmonitor.security.state.secure=Anslutningen som användes för att hämta denna resurs var säker.
+
+# LOCALIZATION NOTE (netmonitor.security.state.insecure)
+# This string is used as an tooltip for request that was performed over insecure
+# channel i.e. the connection was not encrypted.
+netmonitor.security.state.insecure=Anslutningen som användes för att hämta denna resurs var inte krypterad.
+
+# LOCALIZATION NOTE (netmonitor.security.state.broken)
+# This string is used as an tooltip for request that failed due to security
+# issues.
+netmonitor.security.state.broken=En säkerhetsvarning förhindrade resursen från att laddas.
+
+# LOCALIZATION NOTE (netmonitor.security.enabled):
+# This string is used to indicate that a specific security feature is used by
+# a connection in the security details tab.
+# For example: "HTTP Strict Transport Security: Enabled"
+netmonitor.security.enabled=Aktiverad
+
+# LOCALIZATION NOTE (netmonitor.security.disabled):
+# This string is used to indicate that a specific security feature is not used by
+# a connection in the security details tab.
+# For example: "HTTP Strict Transport Security: Disabled"
+netmonitor.security.disabled=Inaktiverad
+
+# LOCALIZATION NOTE (netmonitor.security.hostHeader):
+# This string is used as a header for section containing security information
+# related to the remote host. %S is replaced with the domain name of the remote
+# host. For example: Host example.com
+netmonitor.security.hostHeader=Värd %S:
+
+# LOCALIZATION NOTE (netmonitor.security.notAvailable):
+# This string is used to indicate that a certain piece of information is not
+# available to be displayd. For example a certificate that has no organization
+# defined:
+#   Organization: <Not Available>
+netmonitor.security.notAvailable=<Inte Tillgänglig>
 
 # LOCALIZATION NOTE (collapseDetailsPane): This is the tooltip for the button
 # that collapses the network details pane in the UI.
@@ -141,19 +185,29 @@ networkMenu.second=%S s
 # in the network menu specifying timing interval divisions (in minutes).
 networkMenu.minute=%S min
 
-# LOCALIZATION NOTE (pieChart.empty): This is the label displayed
+# LOCALIZATION NOTE (pieChart.loading): This is the label displayed
 # for pie charts (e.g., in the performance analysis view) when there is
 # no data available yet.
-pieChart.empty=Laddar…
+pieChart.loading=Laddar…
 
-# LOCALIZATION NOTE (tableChart.empty): This is the label displayed
+# LOCALIZATION NOTE (pieChart.unavailable): This is the label displayed
+# for pie charts (e.g., in the performance analysis view) when there is
+# no data available, even after loading it.
+pieChart.unavailable=Tom
+
+# LOCALIZATION NOTE (tableChart.loading): This is the label displayed
 # for table charts (e.g., in the performance analysis view) when there is
 # no data available yet.
-tableChart.empty=Vänta…
+tableChart.loading=Vänta…
+
+# LOCALIZATION NOTE (tableChart.unavailable): This is the label displayed
+# for table charts (e.g., in the performance analysis view) when there is
+# no data available, even after loading it.
+tableChart.unavailable=Ingen data tillgänglig
 
 # LOCALIZATION NOTE (charts.sizeKB): This is the label displayed
 # in pie or table charts specifying the size of a request (in kilobytes).
-charts.sizeKB=%S kB
+charts.sizeKB=%S KB
 
 # LOCALIZATION NOTE (charts.totalS): This is the label displayed
 # in pie or table charts specifying the time for a request to finish (in seconds).
