--- a/sv-SE/browser/chrome/browser/devtools/scratchpad.properties
+++ b/sv-SE/browser/chrome/browser/devtools/scratchpad.properties
@@ -32,6 +32,11 @@ openFile.title=Öppna fil
 # open fails.
 openFile.failed=Kunde inte läsa filen.
 
+# LOCALIZATION NOTE  (importFromFile.convert.failed): This is the message
+# displayed when file conversion from some charset to Unicode fails.
+# %1 is the name of the charset from which the conversion failed.
+importFromFile.convert.failed=Misslyckades med att konvertera fil till Unicode från %1$S.
+
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
 # menuitem in the 'Open Recent'-menu which clears all recent files.
 clearRecentMenuItems.label=Rensa poster
@@ -78,6 +83,11 @@ browserContext.notification=Det här kladdblocket körs i webbläsarmiljön.
 # documentation for Scratchpad on MDN.
 help.openDocumentationPage=https://developer.mozilla.org/en/Tools/Scratchpad
 
+# LOCALIZATION NOTE (scratchpad.statusBarLineCol): Line, Column
+# information displayed in statusbar when selection is made in
+# Scratchpad.
+scratchpad.statusBarLineCol  = Rad %1$S, Kol %2$S
+
 # LOCALIZATION NOTE (fileExists.notification): This is the message displayed
 # over the top of the the editor when a file does not exist.
 fileNoLongerExists.notification=Den här filen finns inte längre.
@@ -95,7 +105,21 @@ connectionTimeout=Anslutningen förföll. Kontrollera felkonsolen i båda ändar
 # in the Developer Tools Menu.
 scratchpad.label=Kladdblocket
 
+# LOCALIZATION NOTE (scratchpad.panelLabel): this is used as the
+# label for the toolbox panel.
+scratchpad.panelLabel=Kladdblockspanel
+
 # LOCALIZATION NOTE (scratchpad.tooltip):  This string is displayed in the
 # tooltip of the tab when the Scratchpad is displayed inside the developer tools
 # window.
 scratchpad.tooltip=Kladdblocket
+
+# LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
+# a new user of the developer tools pastes code into the console
+# %1 is the text of selfxss.okstring
+selfxss.msg=Bluffvarning: Var försiktig när du klistrar in saker du inte förstår. Detta skulle kunna göra det möjligt för angripare att stjäla din identitet eller ta kontroll över din dator. Skriv in '%S' i kladdblocket nedan för att möjliggöra klistring.
+
+# LOCALIZATION NOTE (selfxss.msg): the string to be typed
+# in by a new user of the developer tools when they receive the sefxss.msg prompt.
+# Please avoid using non-keyboard characters here
+selfxss.okstring=tillåt klistring\u0020
