--- a/sv-SE/browser/chrome/browser/devtools/shadereditor.properties
+++ b/sv-SE/browser/chrome/browser/devtools/shadereditor.properties
@@ -15,6 +15,10 @@
 # displayed inside the developer tools window and in the Developer Tools Menu.
 ToolboxShaderEditor.label=Shadereditor
 
+# LOCALIZATION NOTE (ToolboxShaderEditor.panelLabel):
+# This is used as the label for the toolbox panel.
+ToolboxShaderEditor.panelLabel=Shadereditorpanel
+
 # LOCALIZATION NOTE (ToolboxShaderEditor.tooltip):
 # This string is displayed in the tooltip of the tab when the Shader Editor is
 # displayed inside the developer tools window.
