--- a/sv-SE/browser/chrome/browser/devtools/toolbox.properties
+++ b/sv-SE/browser/chrome/browser/devtools/toolbox.properties
@@ -35,9 +35,21 @@ toolbox.titleTemplate=%1$S - %2$S
 # name when no tool is selected.
 toolbox.defaultTitle=Utvecklarverktyg
 
+# LOCALIZATION NOTE (toolbox.label): This is used as the label for the
+# toolbox as a whole
+toolbox.label=Utvecklarverktyg
+
 # LOCALIZATION NOTE (optionsButton.tooltip): This is used as the tooltip
 # for the options panel tab.
 optionsButton.tooltip=Verktygsalternativ
+
+# LOCALIZATION NOTE (options.label): This is used as the label of the tab in
+# the devtools window.
+options.label=Alternativ
+
+# LOCALIZATION NOTE (options.panelLabel): This is used as the label for the
+# toolbox panel.
+options.panelLabel=Alternativpanel för verktyg
 
 # LOCALIZATION NOTE (options.toolNotSupported): This is the template
 # used to add a * marker to the label for the Options Panel tool checkbox for the
@@ -58,3 +70,16 @@ browserConsoleCmd.commandkey=j
 # LOCALIZATION NOTE (pickButton.tooltip)
 # This is the tooltip of the pick button in the toolbox toolbar
 pickButton.tooltip=Välj ett element från sidan
+
+# LOCALIZATION NOTE (options.darkTheme.label)
+# Used as a label for dark theme
+options.darkTheme.label=Mörkt tema
+
+# LOCALIZATION NOTE (options.lightTheme.label)
+# Used as a label for light theme
+options.lightTheme.label=Ljust tema
+
+# LOCALIZATION NOTE (toolbox.noContentProcess.message)
+# Used as a message in the alert displayed when trying to open a browser
+# content toolbox and there is no content process running
+toolbox.noContentProcess.message=Ingen innehållsprocess körs.
