--- a/sv-SE/browser/chrome/browser/devtools/webconsole.properties
+++ b/sv-SE/browser/chrome/browser/devtools/webconsole.properties
@@ -12,7 +12,7 @@
 typeError=Fel:
 typeWarning=Varning:
 typeNetwork=Nätverk:
-typeException=Undantag: 
+typeException=Undantag:\u0020
 typeCssParser=CSS-tolken:
 typeStrict=Strikt varning:
 msgCategory=Kategori:
@@ -26,8 +26,8 @@ tipMutation=Växla loggning av DOM Mutation-händelser
 btnGlobal=Globala meddelanden
 tipGlobal=Växla loggning av Global Message
 localConsole=Lokal konsol
-clearConsoleCmd.label=Rensa konsolen
-clearConsoleCmd.accesskey=k
+clearConsoleCmd.label=Rensa konsol
+clearConsoleCmd.accesskey=n
 close.button=Stäng
 close.accesskey=ä
 update.button=Uppdatera
@@ -167,6 +167,10 @@ MenuWebconsole.label=Webbkonsolen
 # label of the tab in the devtools window.
 ToolboxTabWebconsole.label=Konsol
 
+# LOCALIZATION NOTE (ToolboxWebConsole.panelLabel): the string used as the
+# label for the toolbox panel.
+ToolboxWebConsole.panelLabel=Konsolpanel
+
 # LOCALIZATION NOTE (ToolboxWebconsole.tooltip): the string displayed in the
 # tooltip of the tab when the Web Console is displayed inside the developer
 # tools window.
@@ -222,3 +226,34 @@ openNodeInInspector=Klicka för att välja noden i inspektören
 # LOCALIZATION NOTE (cdFunctionInvalidArgument): the text that is displayed when
 # cd() is invoked with an invalid argument.
 cdFunctionInvalidArgument=Kan inte cd() till det givna fönstret. Ogiltigt argument.
+
+# LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
+# a new user of the developer tools pastes code into the console
+# %1 is the text of selfxss.okstring
+selfxss.msg=Scam Varning: Var försiktig när du klistrar in saker du inte förstår. Detta skulle kunna göra det möjligt för angripare att stjäla din identitet eller ta kontroll över din dator. Skriv in '%S' nedan (du behöver inte trycka på enter) för att möjliggöra klistring.
+
+# LOCALIZATION NOTE (selfxss.msg): the string to be typed
+# in by a new user of the developer tools when they receive the sefxss.msg prompt.
+# Please avoid using non-keyboard characters here
+selfxss.okstring=tillåt klistring\u0020
+
+# LOCALIZATION NOTE (messageToggleDetails): the text that is displayed when
+# you hover the arrow for expanding/collapsing the message details. For
+# console.error() and other messages we show the stacktrace.
+messageToggleDetails=Visa/göm meddelande detaljer.\u0020
+
+# LOCALIZATION NOTE (emptySlotLabel): the text is displayed when an Array
+# with empty slots is printed to the console.
+# This is a semi-colon list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 number of empty slots
+# example: 1 empty slot
+# example: 5 empty slots
+emptySlotLabel=#1 tom plats;#1 tomma platser
+
+# LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
+# the column header displayed in the console table widget.
+table.index=(index)
+table.iterationIndex=(upprepning nummer)
+table.key=Nyckel
+table.value=Värden
