Bug 1022797 - Device settings support

--- a/sk/browser/chrome/browser/devtools/webide.properties
+++ b/sk/browser/chrome/browser/devtools/webide.properties
@@ -75,5 +75,5 @@ status_warning=UPOZORNENIA
 status_error=CHYBY
 status_unknown=NEZNÁMY
 
-# Preferences
-devicepreferences_reset_default=Nastaviť na predvolené
+# Device preferences and settings
+device_reset_default=Nastaviť na predvolené
