[browser] First strings for 38

--- a/fr/browser/chrome/browser/devtools/debugger.properties
+++ b/fr/browser/chrome/browser/devtools/debugger.properties
@@ -315,3 +315,9 @@ functionSearchSeparatorLabel=←
 # The substitution parameter is the URL of the last paused window that must be
 # resumed first.
 resumptionOrderPanelTitle=Il y a un ou plusieurs débogueur(s) en pause. Veuillez d'abord reprendre le débogueur le plus récemment mis en pause à : %S
+
+variablesViewOptimizedOut=(optimisée)
+variablesViewUninitialized=(non initialisée)
+variablesViewMissingArgs=(indisponible)
+
+evalGroupLabel=Sources « eval »
