--- a/fr/browser/chrome/browser/devtools/webide.properties
+++ b/fr/browser/chrome/browser/devtools/webide.properties
@@ -75,5 +75,5 @@ status_warning=AVERTISSEMENTS
 status_error=ERREURS
 status_unknown=INCONNU
 
-# Preferences
-devicepreferences_reset_default=Réinitialiser
+# Device preferences and settings
+device_reset_default=Réinitialiser
