--- a/fr/browser/chrome/browser/browser.properties
+++ b/fr/browser/chrome/browser/browser.properties
@@ -283,13 +283,9 @@ offlineApps.neverAccessKey=e
 offlineApps.notNow=Pas pour cette fois
 offlineApps.notNowAccessKey=c
 
-offlineApps.usage=Ce site (%S) conserve à présent plus de %S Mo de données sur votre ordinateur pour une utilisation hors connexion.
+offlineApps.usage=Ce site (%S) conserve à présent plus de %S Mo de données sur votre ordinateur pour une utilisation hors connexion.
 offlineApps.manageUsage=Afficher les paramètres
 offlineApps.manageUsageAccessKey=p
-
-# LOCALIZATION NOTE (indexedDB.usage): %1$S is the website host name
-# %2$S a number of megabytes.
-indexedDB.usage=Ce site (%1$S) essaie de stocker plus de %2$S Mo de données sur votre ordinateur pour une utilisation hors connexion.
 
 identity.identified.verifier=Vérifié par : %S
 identity.identified.verified_by_you=Vous avez ajouté une exception de sécurité pour ce site.
@@ -435,6 +431,11 @@ syncPromoNotification.addons-sync-disabled.description=Vous pouvez utiliser votr
 dataReportingNotification.message       = %1$S envoie automatiquement certaines informations à %2$S afin que nous puissions améliorer votre navigation.
 dataReportingNotification.button.label  = Choisir ce que j'envoie
 dataReportingNotification.button.accessKey  = C
+
+# Process hang reporter
+processHang.message = Une page web ralentit %1$S. Que voulez-vous faire ?
+processHang.button.label = Options
+processHang.button.accessKey = O
 
 # Webapps notification popup
 webapps.install = Installer
