--- a/fr/browser/chrome/browser/devtools/netmonitor.properties
+++ b/fr/browser/chrome/browser/devtools/netmonitor.properties
@@ -169,6 +169,11 @@ networkMenu.summary=Une requête, #2 Ko, #3 s;#1 requêtes, #2 Ko, #3 s
 # in the network menu specifying the size of a request (in kilobytes).
 networkMenu.sizeKB=%S Ko
 
+# LOCALIZATION NOTE (networkMenu.sizeUnavailable): This is the label displayed
+# in the network menu specifying the transferred size of a request is
+# unavailable.
+networkMenu.sizeUnavailable=—
+
 # LOCALIZATION NOTE (networkMenu.millisecond): This is the label displayed
 # in the network menu specifying the time for a request to finish (in milliseconds).
 networkMenu.totalMS=→ %S ms
