--- a/fr/browser/chrome/browser/devtools/profiler.properties
+++ b/fr/browser/chrome/browser/devtools/profiler.properties
@@ -87,6 +87,10 @@ category.events=Saisies et évènements
 # This string is displayed in the call tree for the root node.
 table.root=(root)
 
+# LOCALIZATION NOTE (table.idle):
+# This string is displayed in the call tree for the idle blocks.
+table.idle=(inactivité)
+
 # LOCALIZATION NOTE (table.url.tooltiptext):
 # This string is displayed in the call tree as the tooltip text for the url
 # labels which, when clicked, jump to the debugger.
