--- a/fr/browser/chrome/browser/devtools/projecteditor.properties
+++ b/fr/browser/chrome/browser/devtools/projecteditor.properties
@@ -13,13 +13,13 @@
 
 # LOCALIZATION NOTE (projecteditor.confirmUnsavedTitle):
 # This string is displayed as as the title of the confirm prompt that checks
-# to make sure if the project editor can be closed without saving changes
+# to make sure if the project can be closed/switched without saving changes
 projecteditor.confirmUnsavedTitle=Changements non enregistrés
 
-# LOCALIZATION NOTE (projecteditor.confirmUnsavedLabel):
+# LOCALIZATION NOTE (projecteditor.confirmUnsavedLabel2):
 # This string is displayed as the message of the confirm prompt that checks
-# to make sure if the project editor can be closed without saving changes
-projecteditor.confirmUnsavedLabel=Des changements non enregistrés seront perdus si vous quittez. Voulez-vous vraiment continuer ?
+# to make sure if the project can be closed/switched without saving changes
+projecteditor.confirmUnsavedLabel2=Des changements non enregistrés seront perdus. Voulez-vous vraiment continuer ?
 
 # LOCALIZATION NOTE (projecteditor.deleteLabel):
 # This string is displayed as a context menu item for allowing the selected
