--- a/fr/browser/chrome/browser/devtools/webaudioeditor.properties
+++ b/fr/browser/chrome/browser/devtools/webaudioeditor.properties
@@ -31,3 +31,7 @@ collapseInspector=Réduire l'inspecteur
 # LOCALIZATION NOTE (expandInspector): This is the tooltip for the button
 # that expands the inspector in the web audio tool UI.
 expandInspector=Développer l'inspecteur
+
+# LOCALIZATION NOTE (webAudioEditorTooltipBypass): This is the tooltip for the
+# button that bypasses an AudioNode
+webAudioEditorTooltipBypass=Sauter l'AudioNode
