--- a/fr/browser/chrome/browser/loop/loop.properties
+++ b/fr/browser/chrome/browser/loop/loop.properties
@@ -13,29 +13,7 @@ clientShortname2=Firefox Hello
 first_time_experience_title={{clientShortname}} — Rejoignez la conversation
 first_time_experience_button_label=Démarrer
 
-share_link_header_text=Partagez ce lien pour inviter quelqu'un à discuter :
 invite_header_text=Invitez quelqu'un à discuter.
-
-## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
-## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
-## Click the label icon at the end of the url field.
-invitee_name_label=Qui voulez-vous inviter ?
-## LOCALIZATION NOTE(invitee_expire_days_label): Allows the user to adjust
-## the expiry time. Click the label icon at the end of the url field to see where
-## this is:
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
-## Semicolon-separated list of plural forms. See:
-## http://developer.mozilla.org/en/docs/Localization_and_Plurals
-## In this item, don't translate the part between {{..}}
-invitee_expire_days_label=L'invitation expirera dans {{expiry_time}} jour;L'invitation expirera dans {{expiry_time}} jours
-## LOCALIZATION NOTE(invitee_expire_hours_label): Allows the user to adjust
-## the expiry time. Click the label icon are the end of the url field to see where
-## this is:
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
-## Semicolon-separated list of plural forms. See:
-## http://developer.mozilla.org/en/docs/Localization_and_Plurals
-## In this item, don't translate the part between {{..}}
-invitee_expire_hours_label=L'invitation expirera dans {{expiry_time}} heure;L'invitation expirera dans {{expiry_time}} heures
 
 # Status text
 display_name_guest=Invité
@@ -67,9 +45,7 @@ share_email_subject4={{clientShortname}} — Rejoignez la conversation
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
 share_email_body4=Bonjour !\r\n\r\nRejoignez-moi pour une conversation vidéo avec {{clientShortname}} :\r\n\r\nVous n'avez rien à télécharger ni à installer. Copiez puis collez simplement ce lien dans votre navigateur :\r\n\r\n{{callUrl}}\r\n\r\nVous pouvez également en apprendre davantage à propos de {{clientShortname}} sur {{learnMoreUrl}}\r\n\r\nÀ bientôt !
-share_button=Courriel
 share_button2=Envoyer le lien par courriel
-copy_url_button=Copier
 copy_url_button2=Copier le lien
 copied_url_button=Copié !
 
@@ -121,6 +97,13 @@ add_or_import_contact_title=Ajouter ou importer des contacts
 ## for where these appear on the UI
 import_contacts_button=Importer
 importing_contacts_progress_button=Importation…
+import_contacts_failure_message=Certains contacts n'ont pas pu être importés. Veuillez réessayer.
+## LOCALIZATION NOTE(import_contacts_success_message): Success notification message
+## when user's contacts have been successfully imported.
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+import_contacts_success_message={{total}} contact a été correctement importé.;{{total}} contacts ont été correctement importés.
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
 sync_contacts_button=Synchroniser les contacts
@@ -270,12 +253,12 @@ powered_by_beforeLogo=Avec l'appui de
 powered_by_afterLogo=
 
 feedback_call_experience_heading2=Comment s'est passée votre conversation ?
-feedback_what_makes_you_sad=Qu'est-ce qui vous a gêné ?
 feedback_thank_you_heading=Merci d'avoir donné votre avis !
+feedback_category_list_heading=Qu'est-ce qui vous a gêné ?
 feedback_category_audio_quality=Qualité audio
 feedback_category_video_quality=Qualité vidéo
 feedback_category_was_disconnected=J'ai été déconnecté(e)
-feedback_category_confusing=Perturbant
+feedback_category_confusing=Contrôles ambigus
 feedback_category_other2=Autre
 feedback_custom_category_text_placeholder=Quels ont été les problèmes ?
 feedback_submit_button=Envoyer
