Translation of new strings 3.5 (dom.properties)

--- a/uk/dom/chrome/dom/dom.properties
+++ b/uk/dom/chrome/dom/dom.properties
@@ -83,7 +83,7 @@ FullScreenDeniedContentOnly=Запит повноекранного режиму
 RemovedFullScreenElement=Вихід з повноекранного режиму, тому що повноекранний елемент був видалений з документу.
 FocusedWindowedPluginWhileFullScreen=Вихід з повноекранного режиму, тому що був у фокусі плагін windowed.
 HTMLSyncXHRWarning=Парсинг HTML в XMLHttpRequest в синхронному режимі не підтримується.
-InvalidRedirectChannelWarning=Не вдалося перенаправити до %S через те, що в канал не надає nsIWritablePropertyBag2.
+InvalidRedirectChannelWarning=Не вдалося перенаправити до %S через те, що канал не надає nsIWritablePropertyBag2.
 ResponseTypeSyncXHRWarning=Властивість responseType в XMLHttpRequest в синхронному режимі в контексті вікна більше не підтримується.
 WithCredentialsSyncXHRWarning=Властивість withCredentials в XMLHttpRequest в синхронному режимі в контексті вікна більше не підтримується.
 TimeoutSyncXHRWarning=Властивість timeout в XMLHttpRequest в синхронному режимі в контексті вікна більше не підтримується.
@@ -105,25 +105,25 @@ MediaLoadHttpError=Не вдалося завантаження HTTP зі ста
 # LOCALIZATION NOTE: %S is the URL of the media resource which failed to load.
 MediaLoadInvalidURI=Некоректний URI. Не вдалося завантажити ресурс медіа %S.
 # LOCALIZATION NOTE: %1$S is the media resource's format/codec type (basically equivalent to the file type, e.g. MP4,AVI,WMV,MOV etc), %2$S is the URL of the media resource which failed to load.
-MediaLoadUnsupportedTypeAttribute=Specified "type" attribute of "%1$S" is not supported. Load of media resource %2$S failed.
+MediaLoadUnsupportedTypeAttribute=Зазначений в "%1$S" атрибут "type" не підтримується. Не вдалося завантажити ресурс медіа %2$S.
 # LOCALIZATION NOTE: %1$S is the "media" attribute value of the <source> element. It is a media query. %2$S is the URL of the media resource which failed to load.
-MediaLoadSourceMediaNotMatched=Specified "media" attribute of "%1$S" does not match the environment. Load of media resource %2$S failed.
+MediaLoadSourceMediaNotMatched=Зазначений в "%1$S" атрибут "media" не відповідає середовищу. Не вдалося завантажити ресурс медіа %2$S.
 # LOCALIZATION NOTE: %1$S is the MIME type HTTP header being sent by the web server, %2$S is the URL of the media resource which failed to load.
-MediaLoadUnsupportedMimeType=HTTP "Content-Type" of "%1$S" is not supported. Load of media resource %2$S failed.
+MediaLoadUnsupportedMimeType=HTTP "Content-Type" типу "%1$S" не підтримується. Не вдалося завантажити ресурс медіа %2$S.
 # LOCALIZATION NOTE: %S is the URL of the media resource which failed to load because of error in decoding.
-MediaLoadDecodeError=Media resource %S could not be decoded.
+MediaLoadDecodeError=Не вдалося декодувати ресурс медіа %S.
 # LOCALIZATION NOTE: Do not translate "DOMException", "code" and "name"
-DOMExceptionCodeWarning=Use of DOMException's code attribute is deprecated. Use name instead.
+DOMExceptionCodeWarning=Використання атрибуту коду DOMException застаріле. Використайте натомість ім’я.
 # LOCALIZATION NOTE: Do not translate "__exposedProps__"
-NoExposedPropsWarning=Exposing chrome JS objects to content without __exposedProps__ is insecure and deprecated. See https://developer.mozilla.org/en/XPConnect_wrappers for more information.
+NoExposedPropsWarning=Показ об’єктів chrome JS вмісту без __exposedProps__ є небезпечним та застарілим. Для докладної інформації ознайомтеся з https://developer.mozilla.org/en/XPConnect_wrappers.
 # LOCALIZATION NOTE: Do not translate "Mutation Event" and "MutationObserver"
-MutationEventWarning=Use of Mutation Events is deprecated. Use MutationObserver instead.
+MutationEventWarning=Використання Mutation Events є застарілим. Використайте натомість MutationObserver.
 # LOCALIZATION NOTE: Do not translate "Components"
-ComponentsWarning=The Components object is deprecated. It will soon be removed.
-PluginHangUITitle=Warning: Unresponsive plugin
-PluginHangUIMessage=%S may be busy, or it may have stopped responding. You can stop the plugin now, or you can continue to see if the plugin will complete.
-PluginHangUIWaitButton=Continue
-PluginHangUIStopButton=Stop plugin
+ComponentsWarning=Об’єкт Components є застарілим. Він незабаром буде видалений.
+PluginHangUITitle=Увага: Плагін не відповідає
+PluginHangUIMessage=Схоже, що %S зайнятий або припинив відповідати. Ви можете зупинити плагін зараз або продовжити і подивитися, чи зможе він завершити свою роботу.
+PluginHangUIWaitButton=Продовжити
+PluginHangUIStopButton=Зупинити плагін
 # LOCALIZATION NOTE: Do not translate "mozHidden", "mozVisibilityState", "hidden", or "visibilityState"
 PrefixedVisibilityApiWarning='mozHidden' and 'mozVisibilityState' are deprecated.  Please use the unprefixed 'hidden' and 'visibilityState' instead.
 # LOCALIZATION NOTE: Do not translate "NodeIterator" or "detach()".
