Copied some changes from Central

--- a/es-CL/browser/chrome/browser/loop/loop.properties
+++ b/es-CL/browser/chrome/browser/loop/loop.properties
@@ -101,6 +101,8 @@ call_progress_ringing_description=Sonando…
 peer_ended_conversation2=La persona a la que llamaba terminó la conversación.
 conversation_has_ended=Su conversación a terminado.
 restart_call=Volver a unirse
+contact_unavailable_title={{contactName}} no está disponible.
+generic_contact_unavailable_title=Esta persona no está disponible.
 generic_failure_title=Algo se fue a las pailas.
 generic_failure_with_reason2=Puede volver a intentarlo o enviar un enlace para probar más tarde.
 generic_failure_no_reason2=¿Le gustaría volver a intentarlo?
@@ -128,7 +130,7 @@ feedback_category_audio_quality=Calidad del audio
 feedback_category_video_quality=Calidad del video
 feedback_category_was_disconnected=Estaba desconectado
 feedback_category_confusing=Confusa
-feedback_category_other=Otro:
+feedback_category_other2=Otro
 feedback_custom_category_text_placeholder=¿Qué falló?
 feedback_submit_button=Enviar
 feedback_back_button=Atrás
