--- a/es-CL/browser/chrome/browser/preferences/preferences.properties
+++ b/es-CL/browser/chrome/browser/preferences/preferences.properties
@@ -47,7 +47,7 @@ cannot = Bloquear
 noCookieSelected = <no hay ninguna cookie seleccionada>
 cookiesAll = <no hay ninguna cookie seleccionada>
 cookiesFiltered = Las siguientes cookies corresponden a su búsqueda:
-
+removeSelectedCookies=Eliminar seleccionada;Eliminar seleccionadas
 offlineAppsList.height=7em
 offlineAppRemoveTitle = Eliminar los datos sin conexión del sitio web
 offlineAppRemovePrompt = Después de eliminar estos datos, %S no estará disponible en modo sin conexión. ¿Está seguro que quiere borrar este sitio del modo sin conexión?
@@ -66,7 +66,3 @@ syncUnlinkConfirm.label = Desvincular
 featureEnableRequiresRestart=%S debe reiniciarse para activar esta característica.
 featureDisableRequiresRestart=%S debe reiniciarse para desactivar esta característica.
 shouldRestartTitle=Reiniciar %S
-
-firefoxAccountsVerificationSentTitle=Verificación enviada
-firefoxAccountsVerificationSentHeading=Un enlace de verificación ha sido enviado a %S
-firefoxAccountVerificationSentDescription=Por favor, revise su correo y apriete en el enlace de verificación para comenzar la sincronización.
