--- a/es-CL/browser/chrome/browser/shellservice.properties
+++ b/es-CL/browser/chrome/browser/shellservice.properties
@@ -18,6 +18,8 @@ setDefaultBrowserNever.accesskey   = D
 setDefaultBrowserTitle=Navegador predeterminado
 setDefaultBrowserMessage=%S no está actualmente configurado como su navegador por defecto. ¿Le gustaría hacerlo su navegador predeterminado?
 setDefaultBrowserDontAsk=Siempre realizar esta comprobación al iniciar %S.
+setDefaultBrowserAlertConfirm.label=Usar %S como mi navegador predeterminado
+setDefaultBrowserAlertNotNow.label=Ahora no
 
 desktopBackgroundLeafNameWin=Fondo de escritorio.bmp
 DesktopBackgroundDownloading=Guardando imagen…
