--- a/es-CL/dom/chrome/dom/dom.properties
+++ b/es-CL/dom/chrome/dom/dom.properties
@@ -116,31 +116,7 @@ ImplicitMetaViewportTagFallback=No se encontró etiqueta meta-viewport. Por favo
 DataContainerEventWarning=El uso de DataContainerEvent está desaprobado. Use CustomEvent en su lugar.
 SendAsBinaryWarning=El método no estándar sendAsBinary está desaprobado y será eliminado en poco tiempo. Use el método estándar send(Blob data) en su lugar.
 Window_ControllersWarning=window.controllers está desaprobado. No lo use para la detección de UA.
-KeyNameDownWarning=El valor "Down" para KeyboardEvent.key está obsoleto y será renombrado "ArrowDown". Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-KeyNameLeftWarning=El valor "Left" para KeyboardEvent.key está obsoleto y será renombrado "ArrowLeft". Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-KeyNameRightWarning=El valor "Right" para KeyboardEvent.key está obsoleto y será renombrado "ArrowRight". Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-KeyNameUpWarning=El valor "Up" para KeyboardEvent.key está obsoleto y será renombrado "ArrowUp". Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-KeyNameCrselWarning=El valor "Crsel" para KeyboardEvent.key está obsoleto y será renombrado "CrSel". Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-KeyNameDelWarning=El valor "Del" para KeyboardEvent.key está obsoleto y será renombrado "Delete". Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-KeyNameExselWarning=El valor "Exsel" para KeyboardEvent.key está obsoleto y será renombrado "ExSel". Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-KeyNameMenuWarning=El valor "Menu" para KeyboardEvent.key está obsoleto y será renombrado "ContextMenu". Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-KeyNameEscWarning=El valor "Esc" para KeyboardEvent.key está obsoleto y será renombrado "Escape". Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-KeyNameNonconvertWarning=El valor "Nonconvert" para KeyboardEvent.key está obsoleto y será renombrado "NonConvert". Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-KeyNameHalfWidthWarning=El valor "HalfWidth" para KeyboardEvent.key está obsoleto y será renombrado "Hankaku". Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-KeyNameRomanCharactersWarning=El valor "RomanCharacters" para KeyboardEvent.key está obsoleto y será renombrado "Romaji" o remapeado a "Eisu". Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-KeyNameFullWidthWarning=El valor "FullWidth" para KeyboardEvent.key está obsoleto y será renombrado "Zenkaku". Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-KeyNameSelectMediaWarning=El valor "SelectMedia" para KeyboardEvent.key está obsoleto y será renombrado "MediaSelect". Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-KeyNameMediaNextTrackWarning=El valor "MediaNextTrack" para KeyboardEvent.key está obsoleto y será renombrado "MediaTrackNext". Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-KeyNameMediaPreviousTrackWarning=El valor "MediaPreviousTrack" para KeyboardEvent.key está obsoleto y será renombrado "MediaTrackPrevious". Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-KeyNameRedWarning=El valor "Red" para KeyboardEvent.key está obsoleto y será renombrado "ColorF0Red". Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-KeyNameGreenWarning=El valor "Green" para KeyboardEvent.key está obsoleto y será renombrado "ColorF1Green". Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-KeyNameYellowWarning=El valor "Yellow" para KeyboardEvent.key está obsoleto y será renombrado "ColorF2Yellow". Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-KeyNameBlueWarning=El valor "Blue" para KeyboardEvent.key está obsoleto y será renombrado "ColorF3Blue". Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-KeyNameLiveWarning=El valor "Live" para KeyboardEvent.key está obsoleto y será removido. Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-KeyNameAppsWarning=El valor "Apps" para KeyboardEvent.key ésta obsoleto y será removido. Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-KeyNameFastFwdWarning=El valor "FastFwd" para KeyboardEvent.key está obsoleto y será renombrado "MediaFastForward". Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-KeyNameZoomWarning=El valor "Zoom" para KeyboardEvent.key está obsoleto y será renombrado "ZoomToggle". Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
-KeyNameDeadKeysWarning=Los valores para KeyboardEvent.key que empiezan con "Dead" están obsoletos y serán unidos en simplemente "Dead". Para más ayuda https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=La importación de nodos XUL a un documento de contenido está obsoleta. Esta funcionalidad será removida pronto.
 XMLDocumentLoadPrincipalMismatch=El uso de document.load está prohibido en documentos que provienen de otra ventana. Solo la ventana en la que ese documento fue creada tiene permiso para llamar .load en ese documento. Preferiblemente, use XMLHttpRequest en su lugar.
 IndexedDBTransactionAbortNavigation=Una transacción de IndexedDB que todavía no había sido completada fue abortada debido a la navegación de la página.
+WillChangeBudgetWarning=El consumo de memoria de Will-change es muy alto. El área cubre %1$S pixeles, el presupuesto es el área del documento multiplicada por %2$S (%3$S pixeles).Todas las ocurrencias de will-change en el documento son ignoradas al estar sobre el presupuesto.
