--- a/es-CL/browser/chrome/browser/browser.properties
+++ b/es-CL/browser/chrome/browser/browser.properties
@@ -204,7 +204,7 @@ safebrowsing.notAForgeryButton.accessKey = F
 safebrowsing.reportedAttackSite = ¡Sospecha de sitio atacante!
 safebrowsing.notAnAttackButton.label = Este no es un sitio peligroso…
 safebrowsing.notAnAttackButton.accessKey = A
-ctrlTab.showAll.label = ;Mostrar las #1 pestañas
+ctrlTab.listAllTabs.label=;Mostrar todas las #1 pestañas
 addKeywordTitleAutoFill = Buscar %S
 tabview.title = %S - Agrupa tus pestañas
 tabview.moveToUnnamedGroup.label = #1 y 1 más;#1 y #2 más
