Copied some changes to Aurora and added some strings, still have work to do

--- a/es-CL/browser/chrome/browser/accounts.properties
+++ b/es-CL/browser/chrome/browser/accounts.properties
@@ -10,6 +10,12 @@ needUserLong = Hemos reconstruido Sync para hacerlo más sencillo para todos. Po
 upgradeToFxA.label = Actualizar
 upgradeToFxA.accessKey = U
 
+# LOCALIZATION NOTE (signInAfterUpgradeOnOtherDevice.description)
+# %S = Email address of user's Firefox Account
+signInAfterUpgradeOnOtherDevice.description = Sync fue actualizado en otro dispositivo por %S. ¿Continuar la sincronización?
+signInAfterUpgradeOnOtherDevice.label = Conectarse
+signInAfterUpgradeOnOtherDevice.accessKey = S
+
 # LOCALIZATION NOTE (needVerifiedUserShort, needVerifiedUserLong)
 # %S = Email address of user's Firefox Account
 needVerifiedUserShort = %S no verificada
@@ -20,6 +26,13 @@ resendVerificationEmail.accessKey = R
 
 forgetMigration.label = Olvidar
 forgetMigration.accessKey = F
+
+unlinkMigration.label = Desvincular Sync
+unlinkMigration.accessKey = L
+
+unlinkVerificationTitle = ¿Desvincular versión anterior de Sync?
+unlinkVerificationDescription = Si ya no quiere recibir recordatorios acerca de actualizar Sync, puede desvincular su cuenta antigua de Sync para quitarla.
+unlinkVerificationConfirm = Desvincular
 
 # These strings are used in a dialog we display after the user requests we resend
 # a verification email.
