--- a/es-CL/browser/chrome/browser/loop/loop.properties
+++ b/es-CL/browser/chrome/browser/loop/loop.properties
@@ -6,11 +6,7 @@
 clientShortname2=Firefox Hello
 first_time_experience_title={{clientShortname}} — Unirse a la conversación
 first_time_experience_button_label=Empezar
-share_link_header_text=Comparte este enlace para invitar a alguien a hablar:
 invite_header_text=Invita a alguien para que se una.
-invitee_name_label=¿A quién está invitando?
-invitee_expire_days_label=La invitación expirará en {{expiry_time}} día;La invitación expirará en {{expiry_time}} días
-invitee_expire_hours_label=La invitación expirará en {{expiry_time}} hora;La invitación expirará en {{expiry_time}} horas
 
 # Status text
 display_name_guest=Invitado
@@ -31,9 +27,7 @@ problem_accessing_account=Hubo un problema al acceder a su cuenta
 retry_button=Reintentar
 share_email_subject4={{clientShortname}} — Únete a la conversación
 share_email_body4=Hello!\r\n\r\nÚnete a una conversación con video usando {{clientShortname}}:\r\n\r\nNo tienes que descargar o instalar nada. Solo copia y pega esta URL en tu navegador:\r\n\r\n{{callUrl}}\r\n\r\nSi lo deseas, también puedes aprender más acerca de {{clientShortname}} en {{learnMoreUrl}}\r\n\r\n¡Hablemos pronto!
-share_button=Correo
 share_button2=Enviar enlace
-copy_url_button=Copiar
 copy_url_button2=Copiar enlace
 copied_url_button=¡Copiado!
 panel_footer_signin_or_signup_link=Conectarse o registrarse
@@ -42,6 +36,7 @@ settings_menu_item_settings=Ajustes
 settings_menu_item_signout=Salir
 settings_menu_item_signin=Conectarse
 settings_menu_button_tooltip=Ajustes
+
 # Contact Strings (Panel)
 contacts_search_placesholder=Buscar…
 new_contact_button=Nuevo contacto
@@ -55,6 +50,8 @@ valid_email_text_description=Por favor, ingrese una dirección de correo válida
 add_or_import_contact_title=Añadir o importar contacto
 import_contacts_button=Importar
 importing_contacts_progress_button=Importando…
+import_contacts_failure_message=Algunos contactos no pudieron ser importados. Por favor, inténtelo nuevamente.
+import_contacts_success_message={{total}} contacto fue importado exitosamente.;{{total}} contactos fueron importados exitosamente.
 sync_contacts_button=Sincronizar contactos
 import_failed_description_simple=Lo sentimos, la importación de contactos falló
 import_failed_description_some=Algunos contactos no pudieron ser importados
@@ -101,6 +98,8 @@ call_progress_ringing_description=Sonando…
 peer_ended_conversation2=La persona a la que llamaba terminó la conversación.
 conversation_has_ended=Su conversación a terminado.
 restart_call=Volver a unirse
+contact_unavailable_title={{contactName}} no está disponible.
+generic_contact_unavailable_title=Esta persona no está disponible.
 generic_failure_title=Algo se fue a las pailas.
 generic_failure_with_reason2=Puede volver a intentarlo o enviar un enlace para probar más tarde.
 generic_failure_no_reason2=¿Le gustaría volver a intentarlo?
@@ -122,13 +121,13 @@ powered_by_beforeLogo=Impulsado por
 powered_by_afterLogo=
 
 feedback_call_experience_heading2=¿Cómo fue su conversación?
-feedback_what_makes_you_sad=¿Qué le entristece?
+feedback_category_list_heading=¿Qué le entristece?
 feedback_thank_you_heading=¿Gracias por sus comentarios!
 feedback_category_audio_quality=Calidad del audio
 feedback_category_video_quality=Calidad del video
 feedback_category_was_disconnected=Estaba desconectado
-feedback_category_confusing=Confusa
-feedback_category_other=Otro:
+feedback_category_confusing2=Controles confusos
+feedback_category_other2=Otro
 feedback_custom_category_text_placeholder=¿Qué falló?
 feedback_submit_button=Enviar
 feedback_back_button=Atrás
