Bug 1126916 - Firefox Desktop 37: preferences. r=Archaeopteryx,Kairo

--- a/de/browser/chrome/browser/preferences/preferences.properties
+++ b/de/browser/chrome/browser/preferences/preferences.properties
@@ -92,6 +92,14 @@ cannot=Blockieren
 noCookieSelected=<Kein Cookie ausgewählt>
 cookiesAll=Folgende Cookies sind momentan auf Ihrem Computer gespeichert:
 cookiesFiltered=Folgende Cookies entsprechen Ihrer Suche:
+# LOCALIZATION NOTE (removeSelectedCookies):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# If you need to display the number of selected elements in your language,
+# you can use #1 in your localization as a placeholder for the number.
+# For example this is the English string with numbers:   
+# removeSelectedCookied=Remove #1 Selected;Remove #1 Selected
+removeSelectedCookies=Ausgewählten Cookie entfernen;Ausgewählte Cookies entfernen
 
 #### Offline apps
 offlineAppsList.height=7em
@@ -137,9 +145,3 @@ syncUnlinkConfirm.label=Trennen
 featureEnableRequiresRestart=%S muss neu gestartet werden, um diese Funktion zu aktivieren.
 featureDisableRequiresRestart=%S muss neu gestartet werden, um diese Funktion zu deaktivieren.
 shouldRestartTitle=%S neu starten
-
-###Preferences::Sync::Firefox Accounts
-firefoxAccountsVerificationSentTitle=Verifizierungs-E-Mail gesendet
-# LOCALIZATION NOTE: %S = user's email address.
-firefoxAccountsVerificationSentHeading=Ein Verifizierungslink wurde an %S gesendet.
-firefoxAccountVerificationSentDescription=Bitte rufen Sie Ihre E-Mails ab und klicken Sie auf den Link, um mit der Synchronisation zu beginnen.
