[th] update from Pootle (mobile)

--- a/th/mobile/android/chrome/browser.properties
+++ b/th/mobile/android/chrome/browser.properties
@@ -354,6 +354,7 @@ getUserMedia.videoSource.default = กล้อง %S
 getUserMedia.videoSource.frontCamera = กล้องหน้า
 getUserMedia.videoSource.backCamera = กล้องหลัง
 getUserMedia.videoSource.none = ไม่พบวิดีโอ
+getUserMedia.videoSource.tabShare = เลือกแท็บที่จะฉาย
 getUserMedia.videoSource.prompt = แหล่งที่มาวิดีโอ
 getUserMedia.audioDevice.default = ไมโครโฟน %S
 getUserMedia.audioDevice.none = ไม่มีเสียง
@@ -372,6 +373,7 @@ openInApp.ok = ตกลง
 openInApp.cancel = ยกเลิก
 
 #Tab sharing
+tabshare.title = "เลือกแท็บที่จะฉาย"
 #Tabs in context menus
 browser.menu.context.default = ลิงก์
 browser.menu.context.img = รูปภาพ
