[th] update from Pootle (mobile)

--- a/th/mobile/android/chrome/sync.properties
+++ b/th/mobile/android/chrome/sync.properties
@@ -37,4 +37,4 @@ sync.message.notabs=ไม่มีแท็บจากคอมพิวเต
 promoBanner.message.text=Sync แบบใหม่ ใช้ง่ายกว่าที่เคย\u0020
 
 # LOCALIZATION NOTE (promoBanner.message.link): Second part of the message, styled as a link.
-promoBanner.message.link=แตะที่นี่เพื่อดูเพิ่มเติม
+promoBanner.message.link=แตะที่นี่เพื่อเรียนรู้เพิ่มเติม
