--- a/th/mobile/android/chrome/webcompatReporter.properties
+++ b/th/mobile/android/chrome/webcompatReporter.properties
@@ -4,9 +4,9 @@
 
 # LOCALIZATION NOTE (webcompat.menu.name): A "site issue" is a bug, display,
 # or functionality problem with a webpage in the browser.
-webcompat.menu.name=รายงานปัญหาเว็บ
+webcompat.menu.name=รายงานปัญหาเว็บไซต์
 
 # LOCALIZATION NOTE (webcompat.reportDesktopMode.message): A " site issue" is a
 # bug, display, or functionality problem with a webpage in the browser.
-webcompat.reportDesktopMode.message=รายงานปัญหาเว็บ?
+webcompat.reportDesktopMode.message=รายงานปัญหาเว็บไซต์?
 webcompat.reportDesktopModeYes.label=รายงาน
