--- a/th/mobile/overrides/passwordmgr.properties
+++ b/th/mobile/overrides/passwordmgr.properties
@@ -13,8 +13,8 @@ dontSaveButton=ไม่แจ้งตำแหน่ง
 # String is the login's hostname
 updatePassword=เปลี่ยนรหัสผ่านของ %S ที่ถูกบันทึกไว้แล้วหรือไม่?
 updatePasswordNoUser=เปลี่ยนรหัสผ่านที่เคยบันทึกไว้แล้วของผู้ใช้นี้หรือไม่?
-updateButton=เปลี่ยน
-dontUpdateButton=ไม่ต้องเปลี่ยน
+updateButton=ปรับปรุง
+dontUpdateButton=ไม่ปรับปรุง
 
 userSelectText=โปรดยืนยันว่าต้องการเปลี่ยนรหัสผ่านสำหรับผู้ใช้ใด
 passwordChangeTitle=ยืนยันการเปลี่ยนแปลงรหัสผ่าน
