Aviary.pl bug 3231 - Zmienić "niezgodny" na "niekompatybilny" lub odwrotnie

--- a/pl/mobile/android/chrome/sync.properties
+++ b/pl/mobile/android/chrome/sync.properties
@@ -19,8 +19,8 @@ notificationDisconnect.button=Cofnij
 # LOCALIZATION NOTE (sync.clientUpdate, sync.remoteUpdate):
 # #1 is the "application name"
 # #2 is the "version"
-sync.update.client=Program #1 #2 nie jest kompatybilny z najnowszą wersją usługi Firefox Sync. Należy zaktualizować program #1 do najnowszej wersji.
-sync.update.remote=Program #1 #2 nie jest kompatybilny ze starszymi wersjami usługi Firefox Sync. Należy zaktualizować Firefoksa na pozostałych komputerach.
+sync.update.client=Program #1 #2 nie jest zgodny z najnowszą wersją usługi Firefox Sync. Należy zaktualizować program #1 do najnowszej wersji.
+sync.update.remote=Program #1 #2 nie jest zgodny ze starszymi wersjami usługi Firefox Sync. Należy zaktualizować Firefoksa na pozostałych komputerach.
 sync.update.title=Firefox Sync
 sync.update.button=Dowiedz się więcej
 sync.update.close=Zamknij
