--- a/pl/mobile/android/chrome/browser.properties
+++ b/pl/mobile/android/chrome/browser.properties
@@ -48,7 +48,7 @@ addonLocalError-1=Instalacja dodatku nie powiodła się z powodu błędu systemu
 addonLocalError-2=Dodatek nie został zainstalowany, ponieważ program #3 oczekiwał innego dodatku.
 addonLocalError-3=Dodatek nie został zainstalowany, ponieważ wygląda na uszkodzony.
 addonLocalError-4=#1 nie został zainstalowany, ponieważ program #3 nie mógł zmodyfikować wymaganego pliku.
-addonErrorIncompatible=#1 nie został zainstalowany, ponieważ nie jest on kompatybilny z programem #3 #4.
+addonErrorIncompatible=#1 nie został zainstalowany, ponieważ nie jest on zgodny z programem #3 #4.
 addonErrorBlocklisted=#1 nie został zainstalowany, ponieważ istnieje duże ryzyko, że spowoduje on problemy ze stabilnością i bezpieczeństwem.
 
 # Notifications
